--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div id="header">Receptek</div>
         <div id="menu"></div>
         <div id="content"></div>
+        <div id="footer"></div>
     </div>
     
 
