some id changes

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div id="container">
-        <div id="header">Receptek</div>
-        <div id="menu"></div>
+        <div id="header"><h1>Receptek</h1></div>
+        <div id="nav"></div>
         <div id="content"></div>
         <div id="footer"></div>
     </div>
