nav elements added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 <body>
     <div id="container">
         <div id="header"><h1>Receptek</h1></div>
-        <div id="nav"></div>
+        <div id="nav">
+            <ul>
+                <li><a href="#"></a>Előételek</li>
+                <li><a href="#"></a>Főételek</li>
+                <li><a href="#"></a>Levesek</li>
+                <li><a href="#"></a>Desszertek</li>
+                <li><a href="#"></a>Saláták</li>
+                <li><a href="#"></a>Turmixok</li>
+                <li><a href="#"></a>Sütemények</li>
+            </ul>
+        </div>
         <div id="content"></div>
         <div id="footer"></div>
     </div>
