--- a/index.html
+++ b/index.html
@@ -10,36 +10,36 @@
 <body>
     <div id="container">
         <div id="header"><h1>Receptek</h1></div>
-        <div id="nav">
-            <ul>
-                <li><a href="#"></a>Előételek</li>
-                <li><a href="#"></a>Főételek</li>
-                <li><a href="#"></a>Levesek</li>
-                <li><a href="#"></a>Desszertek</li>
-                <li><a href="#"></a>Saláták</li>
-                <li><a href="#"></a>Turmixok</li>
-                <li><a href="#"></a>Sütemények</li>
-            </ul>
-        </div>
-        <div id="content">
-            <h2>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi quos in neque expedita eaque? Pariatur, dolorem labore! Laboriosam unde ex hic fugiat, sapiente quibusdam voluptates omnis illum eum odit numquam!
-            </h2>
-
-            <p>
-                <img src="pics/kaja.jpg" alt="Ételkép">Lorem ipsum dolor, sit amet consectetur adipisicing elit. A culpa cumque ipsam laborum voluptates illum quasi est dolorum libero molestiae nulla facere, minus neque optio id perferendis ducimus ullam architecto quia harum. Quasi provident maxime expedita. Doloremque natus modi reiciendis eaque. Consequatur voluptatibus dignissimos animi, molestiae fugiat incidunt porro deleniti officiis laudantium praesentium nostrum voluptatem corporis hic qui at sapiente. Libero temporibus aliquid voluptates alias cupiditate accusamus dignissimos incidunt voluptatem minima, veritatis dolores error quibusdam aspernatur ea! Eos officiis nulla sequi itaque. Blanditiis facilis porro nemo quo dignissimos est totam repellat. Cum omnis voluptatibus nam, quas neque amet, officia ex culpa quasi eaque illum? Enim, minima esse reiciendis eaque excepturi natus itaque quas praesentium cupiditate sed veritatis autem soluta accusantium, aliquam laboriosam est quae quo laudantium blanditiis quam a cumque? Dignissimos eaque delectus aliquid eos. Tempore labore mollitia veniam ratione iusto? Ad fugit numquam perferendis error. Maxime quasi, quo voluptate architecto natus repellendus repellat velit, exercitationem blanditiis odit adipisci! Officia.
-            </p>
-
-            <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. A itaque quod laudantium assumenda incidunt excepturi, earum sapiente possimus saepe commodi officia odit eius quisquam aliquam porro illum. Maiores distinctio illo et? Ex repudiandae facere dolorem similique eum tempora ipsa, nemo iste voluptatem nam numquam odio ad explicabo, voluptatibus obcaecati. Numquam sint, magnam aut facilis voluptates quidem quibusdam quae minus illum dicta in doloribus vitae sit et natus iste suscipit? Culpa unde ipsa reiciendis animi illum. Sint fuga inventore eaque libero?
-            </p>
-            <p>
-                <img src="pics/kaja2.jpg" alt="Ételkép">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta dolorum excepturi consequuntur rerum eos magni veniam hic quasi autem numquam aut nostrum nihil velit vitae blanditiis quaerat nulla commodi esse fugiat itaque neque, accusamus culpa sed praesentium. Ipsum dolorum amet, voluptatem minima ducimus ipsam modi non facere error nobis autem libero a odio. Officiis explicabo dolorem soluta quibusdam fuga cumque consequatur facere quas doloribus quo necessitatibus, pariatur dolor dignissimos dolorum delectus itaque voluptates in aut facilis reprehenderit. Quaerat esse ut ad officiis voluptatibus eos porro voluptate error sit nam fuga quod adipisci nesciunt molestiae cumque magni consequuntur autem, harum exercitationem, et omnis sapiente veritatis nisi recusandae? Harum fuga delectus consequatur commodi dolorum quo obcaecati laudantium velit aliquam eum? Nam, nesciunt!
-            </p>
+        <div id="main">
+            <div id="nav">
+                <ul>
+                    <li><a href="#">Előételek</a></li>
+                    <li><a href="#">Főételek</a></li>
+                    <li><a href="#">Levesek</a></li>
+                    <li><a href="#">Desszertek</a></li>
+                    <li><a href="#">Saláták</a></li>
+                    <li><a href="#">Turmixok</a></li>
+                    <li><a href="#">Sütemények</a></li>
+                </ul>
+            </div>
+            <div id="content">
+                <h2>
+                    <span>Nullam dictum molestie magna id tempor</span>
+                </h2>
+                <p>
+                    <img class="jobb" src="pics/kaja.jpg" alt="Ételkép">Lorem ipsum dolor, sit amet consectetur adipisicing elit. A culpa cumque ipsam laborum voluptates illum quasi est dolorum libero molestiae nulla facere, minus neque optio id perferendis ducimus ullam architecto quia harum. Quasi provident maxime expedita. Doloremque natus modi reiciendis eaque. Consequatur voluptatibus dignissimos animi, molestiae fugiat incidunt porro deleniti officiis laudantium praesentium nostrum voluptatem corporis hic qui at sapiente. Libero temporibus aliquid voluptates alias cupiditate accusamus dignissimos incidunt voluptatem minima, veritatis dolores error quibusdam aspernatur ea! Eos officiis nulla sequi itaque. Blanditiis facilis porro nemo quo dignissimos est totam repellat. Cum omnis voluptatibus nam, quas neque amet, officia ex culpa quasi eaque illum? Enim, minima esse reiciendis eaque excepturi natus itaque quas praesentium cupiditate sed veritatis autem soluta accusantium, aliquam laboriosam est quae quo laudantium blanditiis quam a cumque? Dignissimos eaque delectus aliquid eos. Tempore labore mollitia veniam ratione iusto? Ad fugit numquam perferendis error. Maxime quasi, quo voluptate architecto natus repellendus repellat velit, exercitationem blanditiis odit adipisci! Officia.
+                </p>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. A itaque quod laudantium assumenda incidunt excepturi, earum sapiente possimus saepe commodi officia odit eius quisquam aliquam porro illum. Maiores distinctio illo et? Ex repudiandae facere dolorem similique eum tempora ipsa, nemo iste voluptatem nam numquam odio ad explicabo, voluptatibus obcaecati. Numquam sint, magnam aut facilis voluptates quidem quibusdam quae minus illum dicta in doloribus vitae sit et natus iste suscipit? Culpa unde ipsa reiciendis animi illum. Sint fuga inventore eaque libero?
+                </p>
+                <p>
+                    <img class="bal" src="pics/kaja2.jpg" alt="Ételkép">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta dolorum excepturi consequuntur rerum eos magni veniam hic quasi autem numquam aut nostrum nihil velit vitae blanditiis quaerat nulla commodi esse fugiat itaque neque, accusamus culpa sed praesentium. Ipsum dolorum amet, voluptatem minima ducimus ipsam modi non facere error nobis autem libero a odio. Officiis explicabo dolorem soluta quibusdam fuga cumque consequatur facere quas doloribus quo necessitatibus, pariatur dolor dignissimos dolorum delectus itaque voluptates in aut facilis reprehenderit. Quaerat esse ut ad officiis voluptatibus eos porro voluptate error sit nam fuga quod adipisci nesciunt molestiae cumque magni consequuntur autem, harum exercitationem, et omnis sapiente veritatis nisi recusandae? Harum fuga delectus consequatur commodi dolorum quo obcaecati laudantium velit aliquam eum? Nam, nesciunt!
+                </p>
+            </div>
         </div>
         <div id="footer">
             <p>Copyright duma</p>
-            <p>link 1 | link 2 | link 3</p>
+            <p><a href="#">link 1</a> | <a href="#">link 2</a> | <a href="#">link 3</a></p>
         </div>
     </div>
     
